# mybox

./: .gitignore  .releaserc.build.yaml  .releaserc.json  .releaserc.release.yaml  AGENTS.md  CONTRIBUTING.md  README.md  bootstrap  bootstrap.sh  codecov.yml  coverage-report  docker-test  fourmolu.yaml  install-dev  lint  mybox.cabal  package  package.yaml  pyproject.toml  release.config.mjs  renovate.json  renovate.json5  stack.yaml  test  test-script
.github/workflows/: build.yml  publish.yml  renovate-lockfile.yaml
app/: Main.hs
mybox/: compute.py  config.py  configparser.py  dotfiles.py  driver.py  extractor.py  filters.py  fs.py  installed_files.py  main.py  manager.py  parallel.py  tracker.py  url.py  utils.py
mybox/package/: __init__.py  archive.py  base.py  brew_repo.py  clone.py  daemon.py  destination.py  flatpak.py  github.py  installed_files.py  installer.py  links.py  manual.py  manual_version.py  npm.py  pip.py  pip_base.py  pipx.py  root.py  shell.py  system.py  tracked.py  url.py  yum_repo.py
mybox/package/installer/: __init__.py  apt.py  base.py  brew.py  dnf.py  flatpak.py
mybox/state/: __init__.py  base.py  db.py  installed.py  version.py
src/: Driver.hs  Environment.hs  GitHub.hs  Installer.hs  Package.hs  Process.hs  State.hs  Tool.hs
src/Driver/: Actions.hs  Process.hs  Test.hs  Types.hs
src/Mybox/: Aeson.hs  Compute.hs  Concurrent.hs  Config.hs  Display.hs  Driver.hs  Effects.hs  Extractor.hs  Filters.hs  HasEmpty.hs  Installer.hs  LockMap.hs  Main.hs  Path.hs  Platform.hs  Prelude.hs  RecValue.hs  Release.hs  Stores.hs  Tracker.hs  Utils.hs
src/Mybox/Compute/: Base.hs  Condition.hs  Facts.hs  Format.hs  Implementation.hs  JSONPath.hs  Links.hs  Switch.hs  URL.hs
src/Mybox/Config/: Base.hs  CommandLine.hs  IO.hs  Match.hs  Reader.hs
src/Mybox/Display/: ANSI.hs  Class.hs  Data.hs  None.hs  Ops.hs  Print.hs  Simple.hs
src/Mybox/Driver/: Class.hs  IO.hs  Ops.hs  Platform.hs  Pure.hs  Stats.hs
src/Mybox/Installer/: Apt.hs  Brew.hs  Class.hs  DNF.hs  Flatpak.hs  Mas.hs
src/Mybox/Package/: Archive.hs  BrewRepo.hs  Class.hs  Clone.hs  Daemon.hs  Destination.hs  Effects.hs  Flatpak.hs  Forge.hs  Github.hs  Hash.hs  Links.hs  ManualVersion.hs  NPM.hs  Name.hs  Pipx.hs  Post.hs  Queue.hs  Release.hs  Root.hs  Shell.hs  Some.hs  System.hs  URL.hs  YumRepo.hs
src/Mybox/Package/Archive/: Internal.hs
src/Mybox/Package/BrewRepo/: Internal.hs
src/Mybox/Package/Forge/: Internal.hs
src/Mybox/Package/Github/: Internal.hs
src/Mybox/Package/ManualVersion/: Internal.hs
src/Mybox/Package/NPM/: Internal.hs
src/Mybox/Package/Pipx/: Internal.hs
src/Mybox/Package/Queue/: Effect.hs
src/Mybox/Package/Release/: Internal.hs
src/Mybox/Tracker/: Internal.hs
src/Package/: Clone.hs  Links.hs  Manual.hs  ManualVersion.hs
src/State/: InstalledFile.hs  Version.hs
test/: DriverSpec.hs  StateSpec.hs
test/Driver/: Test.hs
test/Mybox/: AesonSpec.hs  DisplaySpec.hs  ExtractorSpec.hs  FiltersSpec.hs  LockMapSpec.hs  PathSpec.hs  SpecBase.hs  SpecHook.hs  StoresSpec.hs  TrackerSpec.hs
test/Mybox/Compute/: BaseSpec.hs  ConditionSpec.hs  FactsSpec.hs  FormatSpec.hs  ImplementationSpec.hs  JSONPathSpec.hs  LinksSpec.hs  SpecBase.hs  SwitchSpec.hs  URLSpec.hs
test/Mybox/Config/: CommandLineSpec.hs
test/Mybox/Display/: ANSISpec.hs  None.hs  OpsSpec.hs  PrintSpec.hs  SimpleSpec.hs  SpecUtils.hs  Tmux.hs  TmuxSpec.hs
test/Mybox/Driver/: IOSpec.hs  IOTest.hs  Test.hs  TestSpec.hs
test/Mybox/Installer/: AptSpec.hs  BrewSpec.hs  DNFSpec.hs  FlatpakSpec.hs  MasSpec.hs  SpecBase.hs
test/Mybox/Package/: ArchiveSpec.hs  BrewRepoSpec.hs  ClassSpec.hs  CloneSpec.hs  DaemonSpec.hs  FlatpakSpec.hs  ForgeSpec.hs  GithubSpec.hs  LinksSpec.hs  ManualVersionSpec.hs  NPMSpec.hs  NameSpec.hs  PipxSpec.hs  QueueSpec.hs  ReleaseSpec.hs  ShellSpec.hs  SomeSpec.hs  SpecBase.hs  SystemSpec.hs  URLSpec.hs  YumRepoSpec.hs
test/Mybox/Spec/: Assertions.hs  Utils.hs
test/Mybox/Spec/Uncovered/: Assertions.hs  Utils.hs
test/Package/: CloneSpec.hs  LinksSpec.hs  SpecBase.hs
test/fixtures/links/: myfile
tests/: base.py  conftest.py  test_compute.py  test_config.py  test_extractor.py  test_filters.py  test_manager.py  test_os.py  test_parallel.py  test_url.py  test_utils.py
tests/package/: base.py  driver.py  test_base.py  test_brew_repo.py  test_clone.py  test_daemon.py  test_flatpak.py  test_github.py  test_installer.py  test_links.py  test_npm.py  test_pip.py  test_pipx.py  test_shell.py  test_system.py  test_url.py  test_yum_repo.py
tests/package/installer/: test_apt.py  test_brew.py  test_dnf.py  test_flatpak.py
tests/state/: test_state.py
